--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         </div>
       </div>
 
+      <div class="container row ml-2">
+        <div class="card card-body bg-secondary text-light col-6">
+          <h5 class="card-title">Coin Exchange</h5>
+          <p class="card-text">ReactJS 101 Ivan on Tech Academy Project</p>
+          <a href="https://jermay.github.io/coin-exchange" class="btn btn-light">Check it out!</a>
+        </div>
+      </div>
+
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
